Add the rest of the data
Also merge data for doctors
